--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
     "# Split the data using train_test_split\n",
     "\n",
     "# Assign a random_state of 1 to the function\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
    ]
   },
   {
@@ -396,19 +396,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(random_state=1)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the LogisticRegression module from SKLearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "logistic_regression.fit(x_train, y_train)"
    ]
   },
   {
@@ -420,12 +434,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_prediction = logistic_regression.predict(x_test)"
    ]
   },
   {
@@ -443,32 +457,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced Accuracy Score: 0.9521352751368186\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "balanced_accuracy = balanced_accuracy_score(y_test, y_prediction)\n",
+    "print(\"Balanced Accuracy Score:\", balanced_accuracy)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[14926    75]\n",
+      " [   46   461]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "confusion = confusion_matrix(y_test, y_prediction)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     15001\n",
+      "           1       0.86      0.91      0.88       507\n",
+      "\n",
+      "    accuracy                           0.99     15508\n",
+      "   macro avg       0.93      0.95      0.94     15508\n",
+      "weighted avg       0.99      0.99      0.99     15508\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "classification_rep = classification_report(y_test, y_prediction)\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_rep)"
    ]
   },
   {
@@ -484,7 +544,9 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:**  This logistic regression model does a good job of predicting both a heathly loan and a high risk loan. A couple reason why it does a good job is because the balanced accuracy score is 0.952, this indicates the model usually correctly classifies both healthy and high-risk loans. \n",
+    "\n",
+    "The precision for class 0 is 1.00, meaning when the model predicts a healthy loan it's correct 100% of the time. The recall is 1.00, indicating that the model captures 100% of the actual healthy loans. The precision for clas 1 is .86, meaning when the model predicts a loan as high-risk it's correct 86% of the time. The recall for class 1 is 0.91, indicating that the model captures 91% of the actual high-risk loans. "
    ]
   },
   {
