--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -544,7 +544,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:**  This logistic regression model does a good job of predicting both a heathly loan and a high risk loan. A couple reason why it does a good job is because the balanced accuracy score is 0.952, this indicates the model usually correctly classifies both healthy and high-risk loans. \n",
+    "**Answer:**  This logistic regression model does a good job of predicting both a heathly loan and a high risk loan. A couple reason why it does a good job is because the balanced accuracy score is 0.952, this indicates the model usually is correct in classifying both healthy and high-risk loans. \n",
     "\n",
     "The precision for class 0 is 1.00, meaning when the model predicts a healthy loan it's correct 100% of the time. The recall is 1.00, indicating that the model captures 100% of the actual healthy loans. The precision for clas 1 is .86, meaning when the model predicts a loan as high-risk it's correct 86% of the time. The recall for class 1 is 0.91, indicating that the model captures 91% of the actual high-risk loans. "
    ]
@@ -572,41 +572,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'imblearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/3f/8c_y2wf506376ylmkn2jrcvwds1jbr/T/ipykernel_15517/2969427.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import the RandomOverSampler module form imbalanced-learn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mimblearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mover_sampling\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomOverSampler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Instantiate the random oversampler model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# # Assign a random_state parameter of 1 to the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'imblearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the RandomOverSampler module form imbalanced-learn\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "ros = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "x_resampled, y_resampled = ros.fit_resample(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of distinct values: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "distinct_values = y_resampled.nunique()\n",
+    "print(\"Number of distinct values:\", distinct_values)"
    ]
   },
   {
@@ -618,19 +615,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression_model.fit(x_resampled, y_resampled)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_predictions_resampled = logistic_regression_model.predict(x_test)"
    ]
   },
   {
@@ -648,32 +647,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced Accuracy Score: 0.9941749445500477\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy = balanced_accuracy_score(y_test, y_predictions_resampled)\n",
+    "print(\"Balanced Accuracy Score:\", balanced_accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[14915    86]\n",
+      " [    3   504]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "confusion = confusion_matrix(y_test, y_predictions_resampled)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     15001\n",
+      "           1       0.85      0.99      0.92       507\n",
+      "\n",
+      "    accuracy                           0.99     15508\n",
+      "   macro avg       0.93      0.99      0.96     15508\n",
+      "weighted avg       1.00      0.99      0.99     15508\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "classification_rep = classification_report(y_test, y_predictions_resampled)\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_rep)"
    ]
   },
   {
@@ -689,7 +732,9 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** This logistic regression model fit with oversampled data does a better job of predicting both a heathly loan and a high risk loan. A couple reason why it does a better job is because the balanced accuracy score is 0.994, this indicates the model usually is correct in classifying both healthy and high-risk loans. \n",
+    "\n",
+    "The precision for class 0 is 1.00, meaning when the model predicts a healthy loan it's correct 100% of the time. The recall is .99, indicating that the model captures 99% of the actual healthy loans. The precision for clas 1 is .85, meaning when the model predicts a loan as high-risk it's correct 85% of the time. The recall for class 1 is 0.99, indicating that the model captures 99% of the actual high-risk loans. "
    ]
   }
  ],
